@@ -1,7 +1,9 @@
 CHANGES IN VERSION 1.5.1
 ------------------------
- o New shiny apps
- o New vignette
+ o New shiny apps <2015-10-12 Mon>
+ o New vignette <2015-10-29 Thu>
+ o Fixed bugs and updated examples in classify app 
+   <2015-11-09 Mon> 
  
 CHANGES IN VERSION 1.5.0
 ------------------------
